# Oracle-Lottery-Predictor

./: .gitignore  EULA.txt  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-sign-release.yml  changelog.yml  release-please.yml  run-lottery.yml
data/prizes/: eurojackpot.json  joker.json  lotto.json
history/eurojackpot/: README.txt
history/joker/: README.txt
history/lotto/: README.txt
installer/: OracleLotteryPredictor.iss  config_template.json
scripts/: sign.ps1
src/oracle_lottery/ai/: bootstrap_uncertainty.py  luckmeter.py  manager.py
src/oracle_lottery/cli/: backtest.py  features.py  fetch_opap.py  predict.py  repredict.py  scenarios.py  select_mc_luck.py  tune.py
src/oracle_lottery/core/: bayesian_scorer.py  dirichlet_freq.py  ensemble_bma.py  montecarlo.py  mrf_pairs.py  optimizers.py  optimizers_cp.py  orchestrator.py  portfolio_pro.py  predictor.py  shrinkage.py
src/oracle_lottery/data/: fetchers_opap_live.py  games_registry.py  history_features.py  history_importer.py  jackpots.py  prizes.py  store.py
src/oracle_lottery/reports/: analytics.py  backtest.py  curves.py  dashboard.py  evaluator.py  exporters.py  heatmaps.py  importers.py  outcomes.py  plotly_exports.py  scenarios.py
src/oracle_lottery/ui/: main_window.py
src/oracle_lottery/util/: config.py  sentry_init.py
tests/: test_fetch_opap.py  test_import.py  test_import_desktop.py
